# ssh-client

./: package-lock.json  package.json  tsconfig.json
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  ssh.rs  ssh_od.rs
src/components/: HostList.vue  LogViewer.vue
src/components/layouts/: MainLayout.vue
src/components/ssh/: Terminal.vue  TerminalTabs.vue
src/pages/: SettingsView.vue  TerminalPage.vue
src/router/: index.ts
src/services/: github.ts
src/stores/: hosts.ts  keys.ts  logs.ts  settings.ts  terminals.ts
src/types/: naive-ui.d.ts  ssh.ts
src/utils/: crypto.ts
src/views/: HostsView.vue  KeysView.vue  SettingsView.vue
