[package]
name = "ssh-client"
version = "0.1.0"
description = "Open Source SSH Client"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ssh_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9"
tokio = { version = "1.0", features = ["full"] }
keyring = "2"
lazy_static = "1.4.0"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
